--- a/sa_full/full_exercises.ipynb
+++ b/sa_full/full_exercises.ipynb
@@ -1167,6 +1167,257 @@
    "source": [
     "¡Listo! Pudimos leer datos de Google Sheets con la biblioteca Pandas e incluso guardamos el DataFrame que ahora se puede compartir con otras personas o ser utilizado en análisis posteriores."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfc61e28",
+   "metadata": {},
+   "source": [
+    "### *3 JSON - 05 Profundizando en la normalización*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "257225cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = {'Análisis': 'Principales indicadores de enfermedad cardíaca', 'Año': 2020, 'Numero_Pacientes':3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4e6c6ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_lista = [\n",
+    "    { 'ID': '01', 'Intervalo_edad': '55-59', 'Sexo_biologico': 'femenino'},\n",
+    "    { 'ID': '02', 'Intervalo_edad': '80 ó +', 'Sexo_biologico': 'femenino'}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1696def0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_obj = {\n",
+    "    'ID': '01',\n",
+    "    'Intervalo_edad': '55-59',\n",
+    "    'Sexo_biologico': 'Femenino',\n",
+    "    'Salud': {'Dificultad_caminar': 'No',\n",
+    "              'Actividad_fisica': 'Sí',\n",
+    "              'IMC': 16.6,\n",
+    "              'Enfermedad_cardiaca': 'No',\n",
+    "          }\n",
+    "      }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "eec1072e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_list = [\n",
+    "    {\n",
+    "    'ID': '01',\n",
+    "    'Intervalo_edad': '55-59',\n",
+    "    'Sexo_biologico': 'Femenino',\n",
+    "    'Salud': {'Dificultad_caminar': 'No',\n",
+    "              'Actividad_fisica': 'Sí',\n",
+    "              'IMC': 16.6,\n",
+    "              'Enfermedad_cardiaca': 'No',\n",
+    "          }\n",
+    "      },\n",
+    "      {\n",
+    "          'ID': '02',\n",
+    "          'Intervalo_edad': '80 ó +',\n",
+    "          'Sexo_biologico': 'Femenino',\n",
+    "          'Salud': {'Dificultad_caminar': 'No',\n",
+    "                    'Actividad_fisica': 'Sí',\n",
+    "                    'IMC': 20.34,\n",
+    "                    'Enfermedad_cardiaca': 'Sí'}\n",
+    "       }\n",
+    "       ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "085ed9a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_dict = {\n",
+    "  \"Investigación\": \"Indicadores clave de enfermedades cardíacas\",\n",
+    "  \"Año\": 2020,\n",
+    "  \"Pacientes\": [\n",
+    "    {\n",
+    "     \"ID\": \"01\",\n",
+    "      \"Rango_edad\": \"55-59\",\n",
+    "      \"Sexo_biologico\": \"Mujer\",\n",
+    "      \"Raza\": \"Blanca\",\n",
+    "      \"IMC\": 16.6,\n",
+    "      \"Fumador\": \"Sí\",\n",
+    "      \"Consumo_alcohol\": \"No\",\n",
+    "      \"Salud_física\": 3,\n",
+    "      \"Salud_mental\": 30,\n",
+    "      \"Dificultad_caminar\": \"No\",\n",
+    "      \"Actividad_física\": \"Sí\",\n",
+    "      \"Salud_general\": \"Muy buena\",\n",
+    "      \"Horas_sueño\": 5,\n",
+    "      \"Problemas_salud\": [\n",
+    "        \"Diabetes\",\n",
+    "        \"Asma\",\n",
+    "        \"Cancer_piel\"\n",
+    "      ]\n",
+    "    },\n",
+    "    {\n",
+    "      \"ID\": \"02\",\n",
+    "      \"Rango_edad\": \"80 ó +\",\n",
+    "      \"Sexo_biologico\": \"Mujer\",\n",
+    "      \"Raza\": \"Blanca\",\n",
+    "      \"IMC\": 20.34,\n",
+    "      \"Fumador\": \"No\",\n",
+    "      \"Consumo_alcohol\": \"No\",\n",
+    "      \"Salud_física\": 0,\n",
+    "      \"Salud_mental\": 0,\n",
+    "      \"Dificultad_caminar\": \"No\",\n",
+    "      \"Actividad_física\": \"Sí\",\n",
+    "      \"Salud_general\": \"Muy buena\",\n",
+    "      \"Horas_sueño\": 7,\n",
+    "      \"Problemas_salud\": [\n",
+    "        \"AVC\"\n",
+    "      ]\n",
+    "    },\n",
+    "    {\n",
+    "      \"ID\": \"03\",\n",
+    "      \"Rango_edad\": \"65-69\",\n",
+    "      \"Sexo_biologico\": \"Masculino\",\n",
+    "      \"Raza\": \"Blanca\",\n",
+    "      \"IMC\": 26.58,\n",
+    "      \"Fumador\": \"Sí\",\n",
+    "      \"Consumo_alcohol\": \"No\",\n",
+    "      \"Salud_física\": 20,\n",
+    "      \"Salud_mental\": 30,\n",
+    "      \"Dificultad_caminar\": \"No\",\n",
+    "      \"Actividad_física\": \"Sí\",\n",
+    "      \"Salud_general\": \"Muy buena\",\n",
+    "      \"Horas_sueño\": 8,\n",
+    "      \"Problemas_salud\": [\n",
+    "        \"Diabetes\",\n",
+    "        \"Asma\"\n",
+    "      ]\n",
+    "    }\n",
+    "  ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22bf056e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importando la biblioteca Pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "#Importando el módulo JSON\n",
+    "import json\n",
+    "\n",
+    "#Leyendo el archivo json usando el módulo Python JSON\n",
+    "with open('pacientes_2.json','r') as f:\n",
+    "    datos = json.loads(f.read())\n",
+    "\n",
+    "#Normalizando los datos con los parámetros record_path y meta\n",
+    "pd.json_normalize(datos, record_path='Pacientes', meta=['Investigación', 'Año'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43ba3252",
+   "metadata": {},
+   "source": [
+    "### *03 JSON - 07 Archivos JSON de APIs*\n",
+    "\n",
+    "Fruitvice\n",
+    "    https://fruityvice.com/\n",
+    "\n",
+    "requests\n",
+    "    https://pypi.org/project/requests/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e2ed883",
+   "metadata": {},
+   "source": [
+    "### *03 JSON - 08 Normalizar el JSON de la API*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "75db8373",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'requests.models.Response'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "the JSON object must be str, bytes or bytearray, not Response",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m datos_frutas = requests.get(\u001b[33m'\u001b[39m\u001b[33mhttps://fruityvice.com/api/fruit/all\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(datos_frutas))\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m resultado = \u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatos_frutas\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\json\\__init__.py:339\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    337\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    338\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(s, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mbytearray\u001b[39m)):\n\u001b[32m--> \u001b[39m\u001b[32m339\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mthe JSON object must be str, bytes or bytearray, \u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    340\u001b[39m                         \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mnot \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms.\u001b[34m__class__\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m    341\u001b[39m     s = s.decode(detect_encoding(s), \u001b[33m'\u001b[39m\u001b[33msurrogatepass\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n",
+      "\u001b[31mTypeError\u001b[39m: the JSON object must be str, bytes or bytearray, not Response"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "datos_frutas = requests.get('https://fruityvice.com/api/fruit/all')\n",
+    "print(type(datos_frutas))\n",
+    "resultado = json.loads(datos_frutas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f17e665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "datos_frutas_normalizado = pd.json_normalize(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ce7602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_frutas_normalizado"
+   ]
   }
  ],
  "metadata": {
