ALASKA-16 Session 5 completed

--- a/sa_full/full_exercises.ipynb
+++ b/sa_full/full_exercises.ipynb
@@ -1806,6 +1806,237 @@
     "import pandas as pd\n",
     "pd.read_html('https://es.wikipedia.org/wiki/Anexo:Pa%C3%ADses_y_territorios_dependientes_por_poblaci%C3%B3n')[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "371121a9",
+   "metadata": {},
+   "source": [
+    "### *5 Bank - 03 DB & SQLAlchemy*\n",
+    "\n",
+    "Documentación SQLAlchemy\n",
+    "    https://www.sqlalchemy.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d82a81fc",
+   "metadata": {},
+   "source": [
+    "### *5 Bank - 09 Manipulando una base de datos*\n",
+    "Es el momento de poner a prueba tus conocimientos adquiridos durante la clase.\n",
+    "\n",
+    "Usted es responsable de crear una base de datos local de clientes para una institución financiera. Disponemos del archivo CSV con los datos de los clientes.\n",
+    "\n",
+    "CSV\n",
+    "    https://github.com/alura-es-cursos/1980-Pandas_IO/raw/clientes_banco/clientes_banco.csv.zip\n",
+    "\n",
+    "Tu misión es:\n",
+    "\n",
+    "1. Crear la base de datos local con la biblioteca SQLAlchemy.\n",
+    "2. Escribir los datos del archivo CSV en esta base de datos local.\n",
+    "3. Realizar tres actualizaciones en la base de datos:\n",
+    "    - Actualizar el registro del cliente ID 6840104 cuyo rendimiento anual cambió a 300000.\n",
+    "    - Eliminar el registro de cliente ID 5008809, ya que esta persona ya no tiene cuenta en la institución financiera.\n",
+    "    - Crear un nuevo registro de cliente siguiendo las especificaciones a continuación:\n",
+    "        + ID_cliente: 6850985\n",
+    "        + Edad: 33\n",
+    "        + Grado_estudio: Doctorado\n",
+    "        + Estado_civil: Soltero\n",
+    "        + Tamaño_familia: 1\n",
+    "        + Categoria_de_renta: Empleado\n",
+    "        + Ocupacion: TI\n",
+    "        + Años_empleado: 2\n",
+    "        + Rendimiento_anual: 290000\n",
+    "        + Tiene_carro: 0\n",
+    "        + Vivienda: Casa/Departamento propio\n",
+    "\n",
+    "*Consejo importante:* Para agregar un nuevo cliente a la tabla, use la cláusula INSERT INTO seguida del nombre de la tabla y luego especifique los nombres de las columnas de la tabla entre paréntesis. Utilice la cláusula VALUES y luego pase entre paréntesis los nuevos valores para este nuevo registro. Asegúrese de que los valores estén en el orden correcto y en el formato adecuado para cada columna."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eac78cc",
+   "metadata": {},
+   "source": [
+    "### *Instructor*\n",
+    "Para crear la base de datos local es necesario ejecutar los siguientes comandos. Este código consiste en importar la biblioteca sqlalchemy y crear un objeto engine que representa una conexión a una base de datos SQLite en memoria. El método create_engine se utiliza para crear el objeto engine y especificar la base de datos que se utilizará. En este caso, la base de datos es una base de datos SQLite en memoria, que se crea usando sqlite:///:memory::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e784be99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine, MetaData, Table, inspect, text\n",
+    "engine = create_engine('sqlite:///:memory:')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5854baab",
+   "metadata": {},
+   "source": [
+    "A continuación, podemos leer los datos con la función read_csv y escribirlos en el formato de la base de datos con la función to_sql:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce2ab6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "archivo = 'clientes_banco.csv'\n",
+    "datos = pd.read_csv(archivo)\n",
+    "datos.to_sql('clientes', engine, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62c86bce",
+   "metadata": {},
+   "source": [
+    "Después de crear la tabla, podemos obtener un DataFrame con la función read_sql_table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4496dc5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_table('clientes', con=engine.connect())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7922f97",
+   "metadata": {},
+   "source": [
+    "¡Ahora vamos a comenzar las actualizaciones de la base de datos!\n",
+    "\n",
+    "Actualizar el registro del cliente ID 6840104 cuyo rendimiento anual cambió a 300000:\n",
+    "\n",
+    "El siguiente código actualiza el rendimiento anual del ID de cliente 6840104 en la tabla clientes. La variable query contiene una declaración SQL que actualiza ese registro. Luego, la declaración engine.connect() se usa para crear una conexión a la base de datos SQLite. Finalmente, la declaración .execute(text(query)) se utiliza para ejecutar la declaración SQL contenida en la variable query y actualizar el registro en la tabla clientes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b29e16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "query = 'UPDATE clientes SET Rendimiento_anual=300000.0 WHERE ID_Cliente=6840104'\n",
+    "try:\n",
+    "  r_set=engine.connect().execute(text(query))\n",
+    "except SQLAlchemyError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  print(\"#Registros actualizados: \",r_set.rowcount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "512abcd8",
+   "metadata": {},
+   "source": [
+    "Después de ejecutar este código, puede verificar si la actualización realmente ocurrió leyendo la tabla \"clientes\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04c9e0b9",
+   "metadata": {},
+   "source": [
+    "Eliminar el registro de cliente ID 5008809, ya que esta persona ya no tiene una cuenta en la institución financiera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6832ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "query = 'DELETE FROM clientes WHERE ID_Cliente=5008809'\n",
+    "try:\n",
+    "  r_set=engine.connect().execute(text(query))\n",
+    "except SQLAlchemyError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  print(\"#Registros borrados: \",r_set.rowcount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a7f1b89",
+   "metadata": {},
+   "source": [
+    "Cree un nuevo registro de cliente siguiendo las especificaciones dadas anteriormente:\n",
+    "\n",
+    "Al trabajar con bases de datos, es común necesitar insertar nuevos registros en nuestras tablas. Para ello podemos utilizar la cláusula INSERT INTO que nos permite añadir nuevos datos de forma práctica y rápida.\n",
+    "\n",
+    "Para utilizar esta cláusula, primero debe especificar el nombre de la tabla en la que se insertará el registro. A continuación, debemos pasar entre paréntesis los nombres de las columnas donde se agregarán los nuevos valores. Es importante recordar que el orden de los nombres debe ser el mismo orden en el que se pasarán los valores.\n",
+    "\n",
+    "Después de especificar las columnas, usamos la cláusula VALUES para agregar los nuevos valores. Nuevamente debemos pasar entre paréntesis los valores a insertar en el mismo orden en que se especificaron las columnas. Es importante asegurarse de que los valores estén en el formato correcto para cada tipo de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f4144f",
+   "metadata": {},
+   "source": [
+    "Como la `query` es larga, puedes usar `' \\` para indicar que el código continúa en la siguiente línea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4ad9489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "query = 'INSERT INTO clientes (ID_Cliente, Edad, Grado_estudio, Estado_civil, ' \\\n",
+    "        'Tamaño_familia, Categoria_de_renta, Ocupacion, Años_empleado, ' \\\n",
+    "        'Rendimiento_anual, Tiene_carro, Vivienda) ' \\\n",
+    "        'VALUES (6850985, 33, \"Doctorado\", \"Soltero\", 1, \"Empleado\", \"TI\", ' \\\n",
+    "        '2, 290000, 0, \"Casa/Departamento propio\")'\n",
+    "\n",
+    "try:\n",
+    "  r_set=engine.connect().execute(text(query))\n",
+    "except SQLAlchemyError as e:\n",
+    "  print(e)\n",
+    "else:\n",
+    "  print(\"#Registros insertados: \",r_set.rowcount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9bc460d",
+   "metadata": {},
+   "source": [
+    "Para verificar que se realizaron los cambios, puede leer la tabla con el siguiente código:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af4a6c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql_table('clientes', con=engine.connect())"
+   ]
   }
  ],
  "metadata": {
