--- a/sa_full/Pandas_I_O_FAA.ipynb
+++ b/sa_full/Pandas_I_O_FAA.ipynb
@@ -5472,7 +5472,7 @@
         "id": "VfDuxSL8vN1w"
       },
       "source": [
-        "##**Aula 5 - Leyendo banco de datos**"
+        "## **Aula 5 - Leyendo banco de datos**"
       ]
     },
     {
@@ -5481,12 +5481,12 @@
         "id": "bBBgT7YZEICf"
       },
       "source": [
-        "###**Creando un banco de datos local**"
+        "### **Creando un banco de datos local**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 65,
       "metadata": {
         "id": "cHdsOx1LMMqR"
       },
@@ -5497,7 +5497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 66,
       "metadata": {
         "id": "XutYYZzfA36M"
       },
@@ -5523,12 +5523,12 @@
         "id": "RAeI2dtG6Dpy"
       },
       "source": [
-        "###**Escribiendo en un banco de datos**"
+        "### **Escribiendo en un banco de datos**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 67,
       "metadata": {
         "id": "wzAiDflqbBfi"
       },
@@ -5539,18 +5539,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 70,
       "metadata": {
         "id": "vx_KTviWbBfj"
       },
       "outputs": [],
       "source": [
-        "archivo = 'clientes_banco.csv'"
+        "archivo = '../reference/data/clientes_banco.csv'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 71,
       "metadata": {
         "id": "nvtBpM6bbBfj"
       },
@@ -5561,7 +5561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5574,9 +5574,7 @@
         {
           "data": {
             "text/html": [
-              "\n",
-              "  <div id=\"df-5ea50ecd-ea0f-414c-b5a1-ed6d323de2eb\" class=\"colab-df-container\">\n",
-              "    <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -5680,147 +5678,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "    <div class=\"colab-df-buttons\">\n",
-              "\n",
-              "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ea50ecd-ea0f-414c-b5a1-ed6d323de2eb')\"\n",
-              "            title=\"Convert this dataframe to an interactive table.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "\n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-5ea50ecd-ea0f-414c-b5a1-ed6d323de2eb button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5ea50ecd-ea0f-414c-b5a1-ed6d323de2eb');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "<div id=\"df-bdfbc17d-43b6-4232-934c-5881de12f832\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bdfbc17d-43b6-4232-934c-5881de12f832')\"\n",
-              "            title=\"Suggest charts.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "     width=\"24px\">\n",
-              "    <g>\n",
-              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-              "    </g>\n",
-              "</svg>\n",
-              "  </button>\n",
-              "\n",
-              "<style>\n",
-              "  .colab-df-quickchart {\n",
-              "    background-color: #E8F0FE;\n",
-              "    border: none;\n",
-              "    border-radius: 50%;\n",
-              "    cursor: pointer;\n",
-              "    display: none;\n",
-              "    fill: #1967D2;\n",
-              "    height: 32px;\n",
-              "    padding: 0 0 0 0;\n",
-              "    width: 32px;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart:hover {\n",
-              "    background-color: #E2EBFA;\n",
-              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "    fill: #174EA6;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart {\n",
-              "    background-color: #3B4455;\n",
-              "    fill: #D2E3FC;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart:hover {\n",
-              "    background-color: #434B5C;\n",
-              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "    fill: #FFFFFF;\n",
-              "  }\n",
-              "</style>\n",
-              "\n",
-              "  <script>\n",
-              "    async function quickchart(key) {\n",
-              "      const charts = await google.colab.kernel.invokeFunction(\n",
-              "          'suggestCharts', [key], {});\n",
-              "    }\n",
-              "    (() => {\n",
-              "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-bdfbc17d-43b6-4232-934c-5881de12f832 button');\n",
-              "      quickchartButtonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "    })();\n",
-              "  </script>\n",
-              "</div>\n",
-              "    </div>\n",
-              "  </div>\n"
+              "</div>"
             ],
             "text/plain": [
               "   ID_Cliente  Edad     Grado_estudio      Estado_civil  Tamaño_familia  \\\n",
@@ -5845,7 +5703,7 @@
               "4            0  Casa/Departamento propio  "
             ]
           },
-          "execution_count": 122,
+          "execution_count": 72,
           "metadata": {},
           "output_type": "execute_result"
         }
